# workspace

./: .gitignore  README.md  fact.beam
7DTDBot/: .project
LABSO_PROGETTO_2016-2017--179579_180263_180340_181863/: PManager.c~
Promise/: index.js
UECAV/: UECAV.py  UECAV.spec  dateParser.py  out.txt  out1.txt
audio-recorder/: audio-recorder.ino  test.js
bash/: scp.sh  scp.txt  smith.sh  ssh-tar.sh  zwei.sh
box/: box_example.box  factory.box  function.box  list.box  rhino-examples.ri
c++/: HelloWorld  HelloWorld.cpp  chicken_nuggets  chicken_nuggets.cpp  google_eggs  google_eggs.cpp  house_money  house_money.cpp  house_money.in  house_money.out  hungarian.cpp  paring_heap.cpp  prim.cpp  sudoku  sudoku.cpp
c++/extreme-voxel/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  extreme-voxel  main.cpp
c++/extreme-voxel/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
c++/extreme-voxel/glfw/src/: Makefile  cmake_install.cmake
commons-cli-1.4-src/: pom.xml
eiffel/: hello.e
erlang/: count.beam  count.erl  echo.beam  echo.erl  erl_crash.dump  fact.erl  lc.beam  lc.erl  lrs.beam  lrs.erl  ms.beam  ms.erl  nohup.out  ring.beam  ring.erl  sequential.beam  sequential.erl  test.beam  test.erl
flask-test/: flask-test.py
godel-forests/: count.txt  draw  factorint.py  fine.txt  godel-fine-forests.py  graphviz_test.py  print.txt
javascript/: sicurezza.js
javascript-python-ipc/: iris.js
librosa-test/: fourier.py
novelty-test/: ee-test.py  iris-novelty.data  novelty-test.py  novelty-test1.py
numpy-test/: numpy-test.py
(+469 files in other folders)
